Adding simple config.

--- a/project.json
+++ b/project.json
@@ -7,5 +7,11 @@
 	"modules": {
 		"dirlister.py": "列举当前目录下的所有文件，并将文件列表作为字符串返回",
 		"environment.py": "获取木马所在远程机器上的所有环境变量"
-	}
+	},
+	"sections": [
+		{
+			"name": "木马配置",
+			"description": "我们需要对木马分配任务，在一定时期内完成相应的工作。我们需要一种途径通知木马被控端需要完成什么样的工作以及完成这些工作所需要的模块。使用配置文件能满足我们的需求，而且还能根据需要进行休眠（不分配任何任务）。可以对安装的每一个木马都分配一个唯一的标识符，这样可以对木马执行返回的数据进行分类，以及控制单个木马执行特定的任务。"
+		}
+	]
 }
