Add trojan.py and README.md

--- a/project.json
+++ b/project.json
@@ -12,6 +12,10 @@
 		{
 			"name": "木马配置",
 			"description": "我们需要对木马分配任务，在一定时期内完成相应的工作。我们需要一种途径通知木马被控端需要完成什么样的工作以及完成这些工作所需要的模块。使用配置文件能满足我们的需求，而且还能根据需要进行休眠（不分配任何任务）。可以对安装的每一个木马都分配一个唯一的标识符，这样可以对木马执行返回的数据进行分类，以及控制单个木马执行特定的任务。"
+		},
+		{
+			"name": "Python 模块导入功能的破解",
+			"description": "Python 允许我们在导入模块的实现过程中插入自己的功能函数。这样的话，如果在本地找不到需要的模块，就会调用我们编写的用于导入的类，它允许我们远程获取 repo 中的模块并导入。这个功能可以通过添加自定义的类到 sys.meta_path 列表中实现"
 		}
 	]
 }
